Add "Browse Data" page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,5 +21,7 @@
         </activity>
         <activity android:name=".QueryActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity android:name=".BrowseDataActivity"/>
     </application>
 </manifest>
